--- a/Relazione/ResultsAnalysis.tex
+++ b/Relazione/ResultsAnalysis.tex
@@ -10,7 +10,7 @@
 \documentclass[twocolumn]{article}
 \usepackage{float}
 \usepackage{graphicx}
-
+\usepackage{pdfpages}
 \begin{document}
 	
 \section{Performances optimization and input parameter analysis}
